--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue3 + Router + TailWind + GitHub Pages のテスト | れいやのぺるノート</title>
+    <title>Vite + Vue3 + Router + TailWind + GitHub Pages の実装 | れいやのぺるノート</title>
   </head>
   <body>
     <div id="app"></div>
