--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!--
 Copyright (c) 2021 reiya0104 (Student)
-This software is released under the MIT License, see LICENSE.
+This software is released under the MIT License, see LICENSE, see LICENSE.
+This website content is released under the CC BY 4.0 License, see LICENSE.
 -->
 
 <!DOCTYPE html>
