--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ This website content is released under the CC BY 4.0 License, see LICENSE.
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue3 + Router + TailWind + GitHub Pages の実装 | れいやのぺるノート</title>
+    <title>Vite + Vue3 + Router + TailWind + GitHub Pages の実装 | れいやのぺるのーと</title>
   </head>
   <body>
     <div id="app"></div>
